@@ -50,22 +50,17 @@ import static org.apache.rocketmq.a2a.common.constant.RocketMQA2AConstant.ROCKET
  */
 @ApplicationScoped
 public class AgentCardProducer {
-    /**
-     * Required configuration keys.
-     */
-    private static final String PROP_ENDPOINT = "rocketMQEndpoint";
-    private static final String PROP_NAMESPACE = "rocketMQNamespace";
-    private static final String PROP_TOPIC = "bizTopic";
 
     /**
      * Read from system properties.
      */
-    private static final String ROCKETMQ_ENDPOINT = System.getProperty(PROP_ENDPOINT, "");
-    private static final String ROCKETMQ_NAMESPACE = System.getProperty(PROP_NAMESPACE, "");
-    private static final String BIZ_TOPIC = System.getProperty(PROP_TOPIC, "");
+    private static final String ROCKETMQ_ENDPOINT = System.getProperty("rocketMQEndpoint", "");
+    private static final String ROCKETMQ_NAMESPACE = System.getProperty("rocketMQNamespace", "");
+    private static final String BIZ_TOPIC = System.getProperty("bizTopic", "");
 
     /**
      * Produces the public agent card used for service discovery and capability negotiation.
+     *
      * @return fully configured {@link AgentCard}.
      * @throws IllegalArgumentException if required config is missing.
      */
@@ -73,32 +68,33 @@ public class AgentCardProducer {
     @PublicAgentCard
     public AgentCard agentCard() {
         return new AgentCard.Builder()
+            .name("行程规划助手Agent")
+            .description("擅长按照天气的信息帮助用户制定旅行等规划")
+            .url(buildRocketMQUrl())
+            .version("1.0.0")
+            .documentationUrl("http://example.com/docs")
+            .capabilities(new AgentCapabilities.Builder()
+                .streaming(true)
+                .pushNotifications(true)
+                .stateTransitionHistory(true)
+                .build())
+            .defaultInputModes(Collections.singletonList("text"))
+            .defaultOutputModes(Collections.singletonList("text"))
+            .skills(Collections.singletonList(new AgentSkill.Builder()
+                .id("行程规划助手Agent")
                 .name("行程规划助手Agent")
                 .description("擅长按照天气的信息帮助用户制定旅行等规划")
-                .url(buildRocketMQUrl())
-                .version("1.0.0")
-                .documentationUrl("http://example.com/docs")
-                .capabilities(new AgentCapabilities.Builder()
-                        .streaming(true)
-                        .pushNotifications(true)
-                        .stateTransitionHistory(true)
-                        .build())
-                .defaultInputModes(Collections.singletonList("text"))
-                .defaultOutputModes(Collections.singletonList("text"))
-                .skills(Collections.singletonList(new AgentSkill.Builder()
-                                .id("行程规划助手Agent")
-                                .name("行程规划助手Agent")
-                                .description("擅长按照天气的信息帮助用户制定旅行等规划")
-                                .tags(Collections.singletonList("智能出行规划助手"))
-                                .examples(List.of("帮我做一个明天杭州周边自驾游的规划"))
-                                .build()))
-                .preferredTransport(ROCKETMQ_PROTOCOL)
-                .protocolVersion("0.3.0")
-                .build();
+                .tags(Collections.singletonList("智能出行规划助手"))
+                .examples(List.of("帮我做一个明天杭州周边自驾游的规划"))
+                .build()))
+            .preferredTransport(ROCKETMQ_PROTOCOL)
+            .protocolVersion("0.3.0")
+            .build();
     }
 
     /**
      * Constructs a formatted RocketMQ Lite HTTP endpoint URL for topic access.
+     *
      * @return a valid RocketMQ Lite URL suitable for use with A2A SDK.
      * @throws IllegalArgumentException if either {@link #ROCKETMQ_ENDPOINT} or {@link #BIZ_TOPIC} is null or blank,
      * indicating missing critical configuration.
